--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,14 @@
 body {
-    background-color: slategray;
-}
+   background-color: white;
+   
+    font-family: 'Montserrat', sans-serif;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+
+  }
+
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
